vérification après merge

--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
@@ -7,77 +7,77 @@
 
 <div class="row">
     <div class="col-md-12" id="menusMesEvens">
-        <div class="card">
-            <div class="card-header">
-                <a class="h2 font-weight-bold text-dark" data-toggle="collapse" href="#presences">
-                    Présences
-                </a>
-            </div>
-            <div id="presences" class="collapse show" data-parent="#menusMesEvens">
-                <div class="card-body">
-                    @if (Model.listePresences.Count != 0)
-                    {
-                        @foreach (var e in Model.listePresences)
+         <div class="card">
+                <div class="card-header">
+                    <a class="h2 font-weight-bold text-dark" data-toggle="collapse" href="#presences">
+                        Présences
+                    </a>
+                </div>
+                <div id="presences" class="collapse show" data-parent="#menusMesEvens">
+                    <div class="card-body">
+                        @if (Model.listePresences.Count != 0)
                         {
-                        <div class="card">
-                            <img class="card-img-top" src="@e.LienImage" alt="Image">
-                            <div class="card-header">
-                                <h3>@e.NomEvenement</h3>
+                            @foreach (var e in Model.listePresences)
+                            {
+                            <div class="card">
+                                <img class="card-img-top" src="@e.LienImage" alt="Image">
+                                <div class="card-header">
+                                    <h3>@e.NomEvenement</h3>
+                                </div>
+                                <div class="card-body">
+                                    <ul>
+                                        <li>@e.Location</li>
+                                        <li>@e.GetDateFormatée()</li>
+                                        <li>@e.Organisateur.NomUtilisateur</li>
+                                        <li>@e.Description</li>
+                                    </ul>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <a asp-controller="Evenement" asp-action="@e.IdEvenement" class="btn btn-primary" style="color: white; background-color: rgb(138, 66, 255); border-color: white;">Voir les détails</a>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                <ul>
-                                    <li>@e.Location</li>
-                                    <li>@e.GetDateFormatée()</li>
-                                    <li>@e.Organisateur.NomUtilisateur</li>
-                                    <li>@e.Description</li>
-                                </ul>
-                            </div>
-                            <div class="card-footer text-center">
-                                <a asp-controller="Evenement" asp-action="@e.IdEvenement" class="btn btn-primary" style="color: white; background-color: rgb(138, 66, 255); border-color: white;">Voir les détails</a>
-                            </div>
-                        </div>
+                            }
+                        } 
+                        else
+                        {
+                            <h4>Vous ne participez à aucun événement.</h4>
                         }
-                    } 
-                    else
-                    {
-                        <h4>Vous ne participez à aucun événement.</h4>
-                    }
+                    </div>
                 </div>
-            </div>
-        <div class="card">
-            <div class="card-header">
-                <a class="h2 font-weight-bold text-dark" data-toggle="collapse" href="#crees">
-                    Crées
-                </a>
-            </div>
-            <div id="crees" class="collapse" data-parent="#menusMesEvens">
-                <div class="card-body">
-                    @foreach (var e in Model)
-                    {
-                        <div class="card">
-                            <img class="card-img-top" src="@e.LienImage" alt="Image">
-                            <div class="card-header">
-                                <h3>@e.NomEvenement</h3>
-                            </div>
-                            <div class="card-body">
-                                <ul>
-                                    <li>@e.Location</li>
-                                    <li>@e.GetDateFormatée()</li>
-                                    <li>@e.Organisateur.NomUtilisateur</li>
-                                    <li>@e.Description</li>
-                                </ul>
-                            </div>
-                            <div class="card-footer">
-                                <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Modification", "Evenement",e)'">&#43; Modifier</button>
-                            </div>
-                        </div>
-                    }
-                <div class="card-footer">
-                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Creer", "Evenement")'">&#43; Créer</button>
+            <div class="card">
+                <div class="card-header">
+                    <a class="h2 font-weight-bold text-dark" data-toggle="collapse" href="#crees">
+                        Crées
+                    </a>
                 </div>
+                <div id="crees" class="collapse" data-parent="#menusMesEvens">
+                    <div class="card-body">
+                        @foreach (var e in Model.listeCrees)
+                        {
+                            <div class="card">
+                                <img class="card-img-top" src="@e.LienImage" alt="Image">
+                                <div class="card-header">
+                                    <h3>@e.NomEvenement</h3>
+                                </div>
+                                <div class="card-body">
+                                    <ul>
+                                        <li>@e.Location</li>
+                                        <li>@e.GetDateFormatée()</li>
+                                        <li>@e.Organisateur.NomUtilisateur</li>
+                                        <li>@e.Description</li>
+                                    </ul>
+                                </div>
+                                <div class="card-footer">
+                                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Modification", "Evenement",e)'">&#43; Modifier</button>
+                                </div>
+                            </div>
+                        }
+                    <div class="card-footer">
+                        <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Creer", "Evenement")'">&#43; Créer</button>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script src="~/js/signalr/signalr.js"></script>
