--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <h1 class="display-4">@ViewData["Title"]</h1>
     <div class="col-md-12 justify-content-center">
-        <div id="conteneurEvens" class="card-deck">
+        <div id="conteneurEvens">
 
         </div>
     </div>
